--- a/client/layouts/homeLayout.html
+++ b/client/layouts/homeLayout.html
@@ -1,8 +1,5 @@
 <template name="HomeLayout">
-	<header>
-		<h1>Meu Livro de receitas</h1>
-		{{> loginButtons}}
-	</header>
+                {{> Header}}
 	<main>
 		<div class="billboard">
 			<h2>Organizando alimentos</h2>
