--- a/client/layouts/mainLayout.html
+++ b/client/layouts/mainLayout.html
@@ -1,14 +1,8 @@
 <template name="MainLayout">
-	<header>
-		<h1>Meu Livro de receitas</h1>
-		{{> loginButtons}}
-	</header>
-	{{> SideNav}}
-	<main>
-		{{> Template.dynamic template=main}}
-	</main>
+    {{> Header}}
+    {{> SideNav}}
+    <main class="main-layout">
+    	{{> Template.dynamic template=main}}
+    </main>
 </template>
 
-<template name="Test">
-		HELLO ! ! !
-</template>
