--- a/client/partials/sidenav.html
+++ b/client/partials/sidenav.html
@@ -2,13 +2,13 @@
 	<nav class="side-nav">
 		<ul>
 			<li>
-                                            <a href="/recipe-book"><i class="fa fa-list"></i> Livro de receitas</a>
+                                            <a href="/recipe-book"><i class="fa fa-list"></i>Livro de receitas</a>
                                         </li>
 			<li>
-                                            <a href="/menu"><i class="fa fa-map-o"></i> Menu</a>
+                                            <a href="/menu"><i class="fa fa-map-o"></i>Menu</a>
                                         </li>
 			<li>
-                                            <a href="/shopping-list"><i class="fa fa-shopping-cart"></i> Shopping List</a>
+                                            <a href="/shopping-list"><i class="fa fa-shopping-cart"></i>Lista de compras</a>
                                         </li>
 		</ul>
 	</nav>
